--- a/api/pom.xml
+++ b/api/pom.xml
@@ -4,10 +4,9 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.3.0.RELEASE</version>
-    <relativePath/> <!-- lookup parent from repository -->
+    <groupId>io.nbugash</groupId>
+    <artifactId>titan</artifactId>
+    <version>1.0-SNAPSHOT</version>
   </parent>
   <groupId>io.nbugash.titan</groupId>
   <artifactId>api</artifactId>
@@ -17,7 +16,6 @@
 
   <properties>
     <java.version>14</java.version>
-    <spring-cloud.version>Hoxton.SR4</spring-cloud.version>
   </properties>
 
   <dependencies>
@@ -56,19 +54,13 @@
       <artifactId>spring-cloud-stream-test-support</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>io.nbugash</groupId>
+      <artifactId>core</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
-
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>org.springframework.cloud</groupId>
-        <artifactId>spring-cloud-dependencies</artifactId>
-        <version>${spring-cloud.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
 
   <build>
     <plugins>
